configure_file(CAconfig.hpp.cmakein CAconfig.hpp)

file(GLOB EXACA_HEADERS GLOB *.hpp)
file(GLOB EXACA_SOURCES GLOB *.cpp)

install(FILES ${EXACA_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/CAconfig.hpp DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

add_library(ExaCA ${EXACA_SOURCES})
add_library(ExaCA::ExaCA ALIAS ExaCA)

target_link_libraries(ExaCA PUBLIC
    MPI::MPI_CXX
    Kokkos::kokkos
    nlohmann_json::nlohmann_json
)

target_include_directories(ExaCA PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

install(TARGETS ExaCA
  EXPORT ExaCA_Targets
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

install(EXPORT ExaCA_Targets
  FILE ExaCA_Targets.cmake
  NAMESPACE ExaCA::
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/ExaCA)
