file(GLOB EXAGA_HEADERS GLOB *.hpp)
file(GLOB EXAGA_SOURCES GLOB *.cpp)

install(FILES ${EXAGA_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

add_library(ExaGA ${EXAGA_SOURCES})
add_library(ExaCA::ExaGA ALIAS ExaGA)

target_link_libraries(ExaGA PUBLIC ExaCA)

target_include_directories(ExaGA PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

install(TARGETS ExaGA
  EXPORT ExaGA_Targets
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
